# pybanker

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  TODO.md  dev_requirements.txt  git_tools.py  makefile  nose2.cfg  pytest.ini  requirements.txt  setup.cfg  setup.py  unittest.cfg
.github/workflows/: default-ci.yaml
docs/: README.md  design.txt
lib/pybanker/: __init__.py  account.py  accounts.py  cli.py  frequency_utils.py  receipts.py  run-tests.md  schedule.py  shared.py  statements.py  transactions.py
scripts/: pybanker
tests/: README.md  requirements.txt  test_comments.py  test_flake8.py  test_frequency_utils.py  test_pep8.py  test_pybanker.py  utils_for_tests.py
tests/data/simple/receipts/manual/: 20190126.yaml
