[metadata]
name = pybanker
version = 0.0.1
summary = Command line tool to manage personal finances.
description = Command line and curses tool to manage personal finances.
author = Craig Sebenik
#author_email = craig5@users.noreply.github.com
keywords = finance, checkbook
url = https://github.com/craig5/pybanker

[options.entry_points]
console_scripts =
	pybanker = pybanker.cli:PyBankerCli.main

[options]
packages = find:

[flake8]
ignore = E226,E302,E41
max-line-length = 90
