[metadata]
name = pybanker
summary = Command line tool to manage personal finances.
description = Command line and curses tool to manage personal finances.
author = Craig Sebenik
author_email = craig5@users.noreply.github.com
url = https://github.com/craig5/pybanker
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = python, python3, finance, money, quicken, finance, checkbook
license = GNU GPLv3

[options.entry_points]
console_scripts =
	pybanker = pybanker.cli:main

[options]
packages = find:

[flake8]
exclude = .git,venv
ignore = E226,E302,E41
max-line-length = 99
